--- a/style.css
+++ b/style.css
@@ -1,8 +1,44 @@
-body {
-    background: url('osya.jpg')
+.container {
+    background-image: url('./img/bg_main.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 1280px;
+    height: 987px;
+    margin: auto;
+    /* border: 1px solid limegreen; */
+    color: #698A99;
 }
 h1 {
     margin-top: 40vh;
     text-align: center;
-    color: white;
+}
+
+.nav {
+    display: grid;
+    grid-template-columns: 22fr 30fr;
+    padding-top: 138px;
+}
+
+.nav__list {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    grid-column: 2;
+    padding: 0 10px
+}
+
+.button {
+    border: none;
+    background-color: inherit;
+    color: inherit;
+    font-size: 14pt;
+    transition: all 0.5s ease-in-out;
+}
+
+.button:hover,
+.button:focus {
+    cursor: pointer;
+    transform: scale(1.1);
+    transition: all 0.5s ease-in-out;
 }
