--- a/style.css
+++ b/style.css
@@ -174,6 +174,10 @@
     color: #698A99;
 }
 
+.fa-envelope {
+    margin: 3px 4px 0 0;
+}
+
 @media (max-width: 900px) {
     .container {
         grid-template-rows: min-content auto 38px;
