--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 	font-style: normal;
 }
 
-
 .container {
     display: grid;
     grid-template-columns: 22fr 30fr;
@@ -21,6 +20,10 @@
     color: #698A99;
 }
 
+.flex-container-moblie {
+    display: none;
+}
+
 .header {
     grid-column: 2 / 3;
 }
@@ -28,16 +31,28 @@
 .main {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: min-content auto min-content;
     grid-column: 2 / 3;
     padding: 0 20px;
 }
 
-.heading {
+
+.greetings {
     grid-column: 1 / 4;
-    margin: auto 0 18px auto;
-    font-size: 52px;
-    font-weight: 400;
+    align-self: center;
+    justify-self: center;
+    font-size: 25px;
+    font-weight: inherit;
 }
+
+.heading {
+	grid-column: 1 / 4;
+	margin: auto 0 18px auto;
+	font-size: 52px;
+	font-weight: 400;
+}
+
+
 
 .nav {
     padding: 100px 20px 0;
@@ -95,7 +110,7 @@
 }
 
 .paragraph__list-item {
-    width: 300px;
+    max-width: 300px;
     margin-bottom: 20px;
 }
 
@@ -149,9 +164,11 @@
 }
 
 .about-me {
-    grid-column: 1;
+    grid-column: 1 / 4;
     padding-left: 12px;
 }
+
+
 
 .footer {
     grid-column: 1 / 4;
@@ -200,7 +217,98 @@
     .practice {
         padding-left: calc(8% + 12px);
     }
-} 
+}
+
+@media (max-width: 600px) {
+    .container {
+        background-size: 600px;
+    }
+
+    .nav {
+        padding: 35px 0 0 0;
+    }
+
+    .nav__link {
+        font-size: 17px;
+    }
+
+    .main {
+        padding: 0;
+    }
+
+    .practice::before {
+        left: 0px;
+    }
+
+    .practice {
+        padding-left: 12px;
+    }
+
+    .heading {
+        font-size: 24px;
+    }
+
+    .greetings {
+        font-size: 20px;
+        margin-top: 95px;
+    }
+}
+
+@media (max-width: 430px) {
+    .container {
+        background-size: 375px;
+        grid-template-rows: 265px min-content auto min-content 20px;
+        padding: 5px;
+    }
+
+    .header {
+        grid-column: 1 / 3;
+        grid-row: 2;
+    }
+
+    .nav {
+        padding: 0;
+    }
+
+    .main {
+        grid-row: 3;
+        grid-column: 1 / 3;  
+    }
+
+    .heading {
+        grid-row: 4;
+    }
+
+    .footer {
+        grid-row: 5;
+    }
+
+    .greetings {
+        display: none;
+    }
+
+    .contacts {
+        margin-right: 10px;
+    }
+
+    .flex-container-mobile {
+        display: flex;
+        flex-direction: column;
+        grid-column: 2;
+        padding: 25px 0 25px 5px;
+    }
+
+    .greetings-mobile {
+        display: flex;
+        align-items: center;
+        flex-grow: 1;
+        font-size: 20px;
+    }
+
+    .contacts-mobile {
+        align-self: flex-end;
+    }
+}
 
 
 
