position mobile & desktop contacts

--- a/style.css
+++ b/style.css
@@ -168,7 +168,10 @@
     padding-left: 12px;
 }
 
-
+.contacts-desktop {
+    margin-top: 5%;
+    float: right;
+}
 
 .footer {
     grid-column: 1 / 4;
@@ -185,6 +188,10 @@
     text-decoration: none;
     margin-right: 20px;
     color: #698A99;
+}
+
+.contacts-mobile {
+    display: none;
 }
 
 .fab {
@@ -306,7 +313,12 @@
     }
 
     .contacts-mobile {
+        display: block;
         align-self: flex-end;
+    }
+
+    .contacts-desktop {
+        display: none;
     }
 }
 
